Finished initial implementation

--- a/example/src/index.html
+++ b/example/src/index.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <head>
 	<title>React Navigation View</title>
-	<link rel="stylesheet" href="example.css">
 </head>
 <body>
-	<div class="container">
+	<div style='text-align:center;'>
 		<h1>React Navigation View</h1>
-		<h2><a href="https://github.com/collinbrewer/@collinbrewer/react-navigation-view">View project on GitHub</a></h2>
+		<h2><a href="https://github.com/collinbrewer/react-navigation-view">View project on GitHub</a></h2>
 		<!-- the example app is rendered into this div -->
 		<div id="app"></div>
 		<div class="hint">
@@ -16,7 +15,5 @@
 			Copyright &copy; 2016 Collin Brewer.
 		</div>
 	</div>
-	<script src="common.js"></script>
-	<script src="bundle.js"></script>
-	<script src="example.js"></script>
+	<script src="index.js"></script>
 </body>
